
<resources>
    <string name="app_name">ProjMate</string>
    
    <!-- Auth Strings -->
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    
    <!-- Project Strings -->
    <string name="add_project">Add Project</string>
    <string name="project_name">Project Name</string>
    <string name="project_description">Project Description</string>
    <string name="project_link">Project Link (Optional)</string>
    <string name="project_image">Project Image</string>
    <string name="save_project">Save Project</string>
    <string name="upload_image">Upload Image</string>
    
    <!-- Profile Strings -->
    <string name="profile">Profile</string>
    <string name="my_projects">My Projects</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="change_photo">Change Photo</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_changes">Save Changes</string>
    <string name="profile_updated">Profile updated successfully</string>
    
    <!-- Swipe Strings -->
    <string name="discover">Discover</string>
    <string name="swipe_left">Not Interested</string>
    <string name="swipe_right">Interested</string>
    <string name="star_project">Star Project</string>
    <string name="chat">Chat</string>
    
    <!-- Chat Strings -->
    <string name="messages">Messages</string>
    <string name="send">Send</string>
    <string name="type_message">Type a message…</string>
    <string name="no_messages">No messages yet</string>
</resources>